- Add Docker Compose project  - Now able to run Catalog.Ap without need to run mongo container

--- a/src/Services/Catalogue/Catalog.API/Properties/launchSettings.json
+++ b/src/Services/Catalogue/Catalog.API/Properties/launchSettings.json
@@ -26,6 +26,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Schema}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true
     }
   }
 }
