--- a/src/Services/Catalogue/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalogue/Catalog.API/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://catalogueDb:27017",
+    "DatabaseName": "CatalogueDb",
+    "CollectionName": "Products"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
