--- a/src/Services/Catalogue/Catalog.API/appsettings.json
+++ b/src/Services/Catalogue/Catalog.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://catalogueDb:27017",
     "DatabaseName": "CatalogueDb",
     "CollectionName": "Products"
 
